deploy/components/control-plane-db/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: control-plane-db
  labels:
    app.kubernetes.io/name: control-plane-db
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: control-plane-db
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
